# boston-liquor-license-tracker

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  TESTS.md  package.json
.github/workflows/: get-next-meeting-date.yml  lint.yml  liquor-license-applicant-pipeline.yml  scrape_license_board.yml  test-get-next-meeting-date.yml  test-git-lfs.yml  test-voting-minutes.yml  validate-license-data.yml
client/: README.md  eslint-local-rules.js  eslint.config.js  package-lock.json  package.json  stylelint.config.js  vite.config.ts  vitest.config.manual.ts
client/public/: style.css
client/src/: routeTree.gen.ts
client/src/components/layout/: footer.module.css  footer.tsx  header.css  header.module.css  header.tsx
client/src/components/ui/: back-to-home.tsx  button-variants.ts  button.tsx  dot-pagination.css  dot-pagination.tsx  filter-dropdown.tsx  pageheader.css  pageheader.module.css  pageheader.tsx  pagination.tsx  table-legend-button.tsx  table.module.css  table.tsx  tabs.tsx
client/src/data/: extra-work-data.ts  last_processed_date.json  licenses.json  next-meeting-date.json
client/src/data/locales/: en-US.json  es-ES.json  template.json  zh-CN.json  zh-TW.json
client/src/data/schema/: license-schema.json
client/src/i18n/: README.md  i18n-config.ts  lang-switcher.tsx
client/src/map-test/maplibre/: types.ts  (+5 more)
client/src/routes/: __root.tsx  coming-soon.tsx  maps.tsx  resources.tsx
client/src/styles/: README.md  index.css
scraper/: README.md
scraper/dashboard/: README.md  app.py  prd.md  pyproject.toml
scraper/notebooks/: analysis.ipynb  get_census_data.ipynb  pyproject.toml
scraper/scrape/: .gitignore  Makefile  README.md  dev_setup.sh  pyproject.toml  requirements.txt
scraper/scrape/app/: cli.py  constants.py  main.py
scraper/scrape/app/link_filters/: client_side_filter.py  exclude_list_filter.py  video_link_filter.py
scraper/scrape/app/parsers/: date_parser.py  html_link_parser.py
scraper/scrape/app/pipeline/: date_extractor.py  link_fetcher.py  link_filter.py  pdf_downloader.py  pdf_text_extractor.py  pipeline.py
scraper/scrape/app/services/: downloader_service.py  scraper_service.py  text_extractor_service.py
scraper/scrape/app/storage/: json_store.py  kv_store.py  pdf_store.py  run_result.py  stats_logger.py
scraper/scrape/app/utils/: logger.py
scraper/scrape/data/: hearing_video_links.json  license-schema.json  link_stats_log.csv  url_exclude_list.json  voting_minutes_links.json
scraper/scrape/docs/: Scraper_Design_Rational.md
scraper/scrape/notebooks/: text_extract_evaluation.ipynb
scraper/transform/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_fix.sh
scraper/transform/app/: cli.py  constants.py
scripts/: .env  boston_address_parser.py  extract_entity.py  getVotingMinutes.ts  package-lock.json  package.json  paths.ts  requirements.txt  test_extract_entity.py  updateLastProcessedDate.ts  validateLicenseData.ts
scripts/archive/: load_data.py
scripts/getNextMeetingDate/: nextMeetingDate.ts  package-lock.json  package.json
(+102 files in other folders)
