[project]
name = "notebooks"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "pandas>=2.3.3",
    "pikepdf>=10.2.0",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
    "types-python-dateutil>=2.8.24",
    "openpyxl>=3.1.5",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.2",
    "ipykernel>=6.24.2",
    "ipywidgets>=8.1.1",
    "nbformat>=5.10.4",
    "pip>=24.3.1",
    "geopandas>=0.14.4",
]
